<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#C1D1DD"
    android:orientation="vertical"
    android:id="@+id/detail_neighbour_parent_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:id="@+id/imageCardView">

            <ImageView
                android:id="@+id/avatarUrlImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@color/cardview_dark_background" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:text="Caroline"
                android:textSize="30sp"
                android:textColor="#fff"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#ffff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/headerNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="Caroline"
                    android:textSize="20sp"
                    android:textColor="#000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:drawablePadding="10dp"
                    android:text="Saint pierre du mon à 5km"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/ic_place_pink_24dp"/>

                <TextView
                    android:id="@+id/phoneNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:drawablePadding="10dp"
                    android:text="+33 6 86 57 90 14"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/ic_local_phone_24dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#ffff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/headerAboutMeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="A propos de moi"
                android:textSize="20sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/aboutMeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text=".............................................................................................................................................................................................................................................."
                android:textColor="#000"
                android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    </LinearLayout>

    </ScrollView>

    <include layout="@layout/toolbar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="#C1D1DD"
        android:src="@drawable/ic_star_border_black_24dp"
        app:layout_anchor="@id/avatarUrlImageView"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>